Commit before Develop Pull

--- a/ShittyPrototype.csproj
+++ b/ShittyPrototype.csproj
@@ -86,12 +86,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\WindowsGL\Debug\Lidgren.Network.dll" />
+    <Content Include="bin\WindowsGL\Debug\MonoGame.Framework.dll" />
+    <Content Include="bin\WindowsGL\Debug\OpenTK.dll" />
+    <Content Include="bin\WindowsGL\Debug\ShittyPrototype.exe" />
+    <Content Include="bin\WindowsGL\Debug\ShittyPrototype.pdb" />
+    <Content Include="bin\WindowsGL\Debug\ShittyPrototype.vshost.exe" />
+    <Content Include="bin\WindowsGL\Debug\Tao.Sdl.dll" />
     <Content Include="Content\Caves.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Icon.ico" />
+    <Content Include="lib\lua51.dll" />
+    <Content Include="lib\LuaInterface.dll" />
+    <Content Include="obj\x86\Debug\ShittyPrototype.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\x86\Debug\ShittyPrototype.exe" />
+    <Content Include="obj\x86\Debug\ShittyPrototype.pdb" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="bin\WindowsGL\Release\" />
+    <Folder Include="obj\x86\Debug\TempPE\" />
+    <Folder Include="src\application\core\entityframework\" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
       <Visible>False</Visible>
@@ -116,9 +132,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\WindowsGL\Debug\Content\monster.xnb" />
+    <None Include="bin\WindowsGL\Debug\Content\monster2.xnb" />
+    <None Include="bin\WindowsGL\Debug\Content\monster3.xnb" />
+    <None Include="bin\WindowsGL\Debug\Content\monster4.xnb" />
+    <None Include="bin\WindowsGL\Debug\ShittyPrototype.exe.config" />
+    <None Include="bin\WindowsGL\Debug\ShittyPrototype.vshost.exe.config" />
+    <None Include="bin\WindowsGL\Debug\ShittyPrototype.vshost.exe.manifest" />
     <None Include="Content\Cave.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="obj\x86\Debug\build.force" />
+    <None Include="obj\x86\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\x86\Debug\ShittyPrototype.csprojResolveAssemblyReference.cache" />
     <None Include="scripts\HelloWorld.lua">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
