--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -36,11 +36,16 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="game\Core\Components\SpawnerCompnent.cs" />
+    <Compile Include="game\Core\Components\MonsterComponent.cs" />
     <Compile Include="game\Core\Components\Renderable.cs" />
+    <Compile Include="game\Core\Components\TimeComponent.cs" />
     <Compile Include="game\Core\Components\Render\Sprite.cs" />
     <Compile Include="game\Core\Components\Spatial.cs" />
     <Compile Include="game\Core\EntityFactory.cs" />
     <Compile Include="game\Core\ResourceManager.cs" />
+    <Compile Include="game\Core\Systems\Monster\MonsterSystem.cs" />
+    <Compile Include="game\Core\Systems\Spawners\SpawnerSystem.cs" />
     <Compile Include="game\Core\Systems\Util\SystemDescriptions.cs" />
     <Compile Include="game\Core\Systems\Util\SystemParams.cs" />
     <Compile Include="game\Dirty.cs" />
