Event Manager P.O.C. Events currently consist of an (arbitrary) string name and no other data. See AnimationSystem for a sloppy example that it actually works.

--- a/EntityFramework/EntityFramework.csproj
+++ b/EntityFramework/EntityFramework.csproj
@@ -44,7 +44,9 @@
     <Compile Include="BitVector.cs" />
     <Compile Include="Component.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Managers\EntityManager.cs" />
+    <Compile Include="Managers\EventManager.cs" />
     <Compile Include="Systems\EntitySystem.cs" />
     <Compile Include="Managers\GroupManager.cs" />
     <Compile Include="Mappers.cs" />
