--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -37,6 +37,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="game\Core\Components\AIComponent.cs" />
+    <Compile Include="game\Core\Components\Collision\Collidable.cs" />
+    <Compile Include="game\Core\Components\Collision\CollidableMonster.cs" />
+    <Compile Include="game\Core\Components\Collision\CollidablePlayer.cs" />
     <Compile Include="game\Core\Components\MonsterComponent.cs" />
     <Compile Include="game\Core\Components\Movement\AIMovementComponent.cs" />
     <Compile Include="game\Core\Components\Movement\MovementComponent.cs" />
@@ -56,6 +59,7 @@
     <Compile Include="game\Core\GameStates\IGameState.cs" />
     <Compile Include="game\Core\GameStates\SplashScreenState.cs" />
     <Compile Include="game\Core\ResourceManager.cs" />
+    <Compile Include="game\Core\Systems\CollisionSystem.cs" />
     <Compile Include="game\Core\Systems\MapBoundarySystem.cs" />
     <Compile Include="game\Core\Systems\Monster\AISystem.cs" />
     <Compile Include="game\Core\Systems\Monster\MonsterSystem.cs" />
