--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -51,11 +51,13 @@
     <Compile Include="game\Core\Events\Event.cs" />
     <Compile Include="game\Core\EventManager.cs" />
     <Compile Include="game\Core\GameManager.cs" />
+    <Compile Include="game\Core\GameStates\ExitState.cs" />
     <Compile Include="game\Core\GameStates\GamePlay.cs" />
     <Compile Include="game\Core\GameStates\GameStateManager.cs" />
     <Compile Include="game\Core\GameStates\IGameState.cs" />
     <Compile Include="game\Core\GameStates\SplashScreenState.cs" />
     <Compile Include="game\Core\ResourceManager.cs" />
+    <Compile Include="game\Core\Systems\GameLogicSystem.cs" />
     <Compile Include="game\Core\Systems\MapBoundarySystem.cs" />
     <Compile Include="game\Core\Systems\Monster\AISystem.cs" />
     <Compile Include="game\Core\Systems\Monster\MonsterSystem.cs" />
