--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -36,6 +36,9 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="game\Input\InputContext.cs" />
+    <Compile Include="game\Input\KeyHandler.cs" />
+    <Compile Include="game\Input\InputManager.cs" />
     <Compile Include="game\Core\Components\AIComponent.cs" />
     <Compile Include="game\Core\Components\Collision\Collidable.cs" />
     <Compile Include="game\Core\Components\Collision\CollidableMonster.cs" />
