finished bsp map generator along with refactor of map class

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -75,12 +75,12 @@
     <Compile Include="game\Core\Systems\Util\SystemParams.cs" />
     <Compile Include="game\Dirty.cs" />
     <Compile Include="game\App.cs" />
-    <Compile Include="game\Map\Generators\BSP Generator\BSPMapGenerator.cs" />
-    <Compile Include="game\Map\Generators\BSP Generator\Room.cs" />
-    <Compile Include="game\Map\Generators\BSP Generator\Space.cs" />
+    <Compile Include="game\Map\Generators\BSP\BSPMapGenerator.cs" />
+    <Compile Include="game\Map\Generators\BSP\BSPNode.cs" />
     <Compile Include="game\Map\Generators\IMapGenerator.cs" />
     <Compile Include="game\Map\Map.cs" />
-    <Compile Include="game\Map\Map2.cs" />
+    <Compile Include="game\Map\Map3.cs" />
+    <Compile Include="game\Map\SubMap.cs" />
     <Compile Include="game\Map\TileData.cs" />
     <Compile Include="game\Map\TileMap.cs" />
     <Compile Include="game\Map\Tileset.cs" />
@@ -98,7 +98,8 @@
     <Compile Include="game\Core\Systems\Render\SpriteRenderSystem.cs" />
     <Compile Include="game\SGraphics\SpriteSheet.cs" />
     <Compile Include="game\Util\Logger.cs" />
-    <Compile Include="game\Util\RandomNumberGenerator.cs" />
+    <Compile Include="game\Util\Rand.cs" />
+    <Compile Include="game\Util\RowCol.cs" />
     <Compile Include="game\Util\Singleton.cs" />
     <Compile Include="game\Util\Utillity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
