--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -43,7 +43,10 @@
     <Compile Include="game\Core\Components\DirectionComponent.cs" />
     <Compile Include="game\Core\Components\MonsterComponent.cs" />
     <Compile Include="game\Core\Components\Movement\AIMovementComponent.cs" />
+    <Compile Include="game\Core\Components\Movement\FleeMover.cs" />
     <Compile Include="game\Core\Components\Movement\MovementComponent.cs" />
+    <Compile Include="game\Core\Components\Movement\Mover.cs" />
+    <Compile Include="game\Core\Components\Movement\SeekMover.cs" />
     <Compile Include="game\Core\Components\Player.cs" />
     <Compile Include="game\Core\Components\Renderable.cs" />
     <Compile Include="game\Core\Components\Animation.cs" />
@@ -60,6 +63,8 @@
     <Compile Include="game\Core\GameStates\GameStateManager.cs" />
     <Compile Include="game\Core\GameStates\IGameState.cs" />
     <Compile Include="game\Core\GameStates\SplashScreenState.cs" />
+    <Compile Include="game\Core\Path.cs" />
+    <Compile Include="game\Core\PathFinder.cs" />
     <Compile Include="game\Core\ResourceManager.cs" />
     <Compile Include="game\Core\Systems\CollisionSystem.cs" />
     <Compile Include="game\Core\Systems\GameLogicSystem.cs" />
@@ -67,6 +72,8 @@
     <Compile Include="game\Core\Systems\Monster\AISystem.cs" />
     <Compile Include="game\Core\Systems\Monster\MonsterSystem.cs" />
     <Compile Include="game\Core\Systems\Movement\MovementSystem.cs" />
+    <Compile Include="game\Core\Systems\Movement\FleeMovermentSystem.cs" />
+    <Compile Include="game\Core\Systems\Movement\SeekMovementSystem.cs" />
     <Compile Include="game\Core\Systems\PlayerControlSystem.cs" />
     <Compile Include="game\Core\Systems\Render\AnimationSystem.cs" />
     <Compile Include="game\Core\Systems\Render\CameraUpdateSystem.cs" />
