--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -68,6 +68,7 @@
     <Compile Include="game\Core\ResourceManager.cs" />
     <Compile Include="game\Core\Systems\CollisionSystem.cs" />
     <Compile Include="game\Core\Systems\GameLogicSystem.cs" />
+    <Compile Include="game\Core\Systems\HUDSystem.cs" />
     <Compile Include="game\Core\Systems\MapBoundarySystem.cs" />
     <Compile Include="game\Core\Systems\Monster\AISystem.cs" />
     <Compile Include="game\Core\Systems\Monster\MonsterSystem.cs" />
