Renamed Animation.cs -> AnimationComponent.cs Removed the animation of the monsters for now. Player movement animates in the direction you press a arrow key and goes back to idle. Nothing with Finite or Infinite animation implemented. If you want to have animation you add an AnimationComponent to the Entity and then remove it when you are done with the animation.

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -49,7 +49,7 @@
     <Compile Include="game\Core\Components\Movement\MovementComponent.cs" />
     <Compile Include="game\Core\Components\Player.cs" />
     <Compile Include="game\Core\Components\Renderable.cs" />
-    <Compile Include="game\Core\Components\Animation.cs" />
+    <Compile Include="game\Core\Components\AnimationComponent.cs" />
     <Compile Include="game\Core\Components\Render\Sprite.cs" />
     <Compile Include="game\Core\Components\Spatial.cs" />
     <Compile Include="game\Core\Components\SpawnerCompnent.cs" />
