#43 adds a health component with basic hp. Entities with 0 health die and are removed. #35 ranged damage. Adds projectile component. Projectiles spawned by player. Projectiles do damage to entites with health.

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -39,6 +39,8 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="game\Core\Components\HealthComponent.cs" />
+    <Compile Include="game\Core\Components\ProjectileComponent.cs" />
     <Compile Include="game\Core\Components\Unit\UnitComponent.cs" />
     <Compile Include="game\Input\InputContext.cs" />
     <Compile Include="game\Input\KeyHandler.cs" />
