Proper use of EventManager, cuz i'm stupid and did it wrong the first time

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="game\Core\Components\HealthComponent.cs" />
     <Compile Include="game\Core\Components\Unit\UnitComponent.cs" />
+    <Compile Include="game\Core\Events\CollisionEvent.cs" />
     <Compile Include="game\Core\Systems\HealthSystem.cs" />
     <Compile Include="game\Input\InputContext.cs" />
     <Compile Include="game\Input\KeyHandler.cs" />
